testsuite/tests/typecheck/should_fail/T12785b.stderr

T12785b.hs:29:63: error:
    • Could not deduce: Payload ('S n1) (Payload n1 s1) ~ s
        arising from a use of ‘SBranchX’
      from the context: m1 ~ 'S n1
        bound by a pattern with constructor:
                   Branch :: forall a (n :: Peano).
                             a -> HTree n (HTree ('S n) a) -> HTree ('S n) a,
                 in an equation for ‘nest’
        at T12785b.hs:29:7-51
    • In the second argument of ‘($)’, namely ‘a `SBranchX` tr’
      In the expression: Hide $ a `SBranchX` tr
      In an equation for ‘nest’:
          nest (Hide a `Branch` (nest . hmap nest -> Hide tr))
            = Hide $ a `SBranchX` tr
    • Relevant bindings include
        tr :: STree
                n1
                (HTree ('S n1) (HTree ('S ('S n1)) a))
                (STree ('S n1) (HTree ('S ('S n1)) a) (STree ('S ('S n1)) a f))
                s1
          (bound at T12785b.hs:29:49)
        a :: STree ('S m1) a f s (bound at T12785b.hs:29:12)
        nest :: HTree m1 (Hidden ('S m1) f)
                -> Hidden m1 (STree ('S m1) a f)
          (bound at T12785b.hs:27:1)
